--- a/index.html
+++ b/index.html
@@ -21,18 +21,18 @@
     </br>
     <p>This is a great way to meet other artists in the area, discover new music and audible art, and get your own tracks out there for others to hear.</p>
     </br></br>
-    <p><b>// Upcoming Listening Parties</b></p>
+    <p style="opacity:.5;"><b>// Upcoming Listening Parties</b></p>
     </br>
     <p><b>Thursday, February 27 @ 5pm</b></p>
     <p>National Portrait Gallery Courtyard</p>
     <a href="https://airtable.com/shrH1ByMn652qj8lO">Sign up to participate</a>
     </br></br></br>
-    <p><b>// Past Listening Parties</b></p>
+    <p style="opacity:.5;"><b>// Past Listening Parties</b></p>
     </br>
     <p><b>Thursday, February 6</b></p>
     <a href="https://airtable.com/shrH1ByMn652qj8lO">Listen to this playlist</a>
     </br></br></br>
-    <p><b>// FAQ</b></p>
+    <p style="opacity:.5;"><b>// FAQ</b></p>
     </br>
     <p><b>How do I submit a track?</b></p>
     <a href="https://airtable.com/shrH1ByMn652qj8lO">Submit a track here</a>
