--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <p><b>Other things to note</b></p>
     <ul>
         <li>any genre is welcome as long as the content is not hurtful or offensive toward anyone</li>
-		<li>anyone is welcome to participate (including white men), but especially non-white non-men</li>
+		<li>all are encouraged to participate (including white men), but especially non-white non-men</li>
         <li>listening parties are capped at 8 people to maintain a small setting</li>
         <li>we will all listen together using our radio station so please bring a device that can connect to the internet and your own headphones</li>
     </ul>
