--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
     <p><b>What counts as a track?</b></p>
     <p>A track can be anything from a song, poem, spoken word, or anything else created sonically and is less than 5ish minutes long (we ask that your piece is in a somewhat complete state, meaning not just a riff or one verse)</p>
     </br>
+    <p><b>Does my track need to be professionally recorded?</b></p>
+    <p>Not at all. A phone recording is completely fine. If you need help recording or producing your track, please <a href="mailto:derektorsani@gmail.com">reach out to me</a>.</p>
+    </br>
     <p><b>Does it cost anything?</b></p>
     <p>No, this is free.</p>
     </br>
