--- a/index.html
+++ b/index.html
@@ -21,18 +21,18 @@
     </br>
     <p>This is a great way to meet other artists in the area, discover new music and audible art, and get your own tracks out there for others to hear.</p>
     </br></br>
-    <p style="opacity:.5;"><b>// Upcoming Listening Parties</b></p>
+    <p style="opacity:.5;"><b>Upcoming Listening Parties</b></p>
     </br>
     <p><b>Thursday, February 27 @ 5pm</b></p>
-    <p>National Portrait Gallery Courtyard</p>
+    <p>National Portrait Gallery Courtyard - Washington, DC</p>
     <a href="https://airtable.com/shrH1ByMn652qj8lO">Sign up to participate</a>
     </br></br></br>
-    <p style="opacity:.5;"><b>// Past Listening Parties</b></p>
+    <p style="opacity:.5;"><b>Past Listening Parties</b></p>
     </br>
     <p><b>Thursday, February 6</b></p>
     <a href="https://airtable.com/shrH1ByMn652qj8lO">Listen to this playlist</a>
     </br></br></br>
-    <p style="opacity:.5;"><b>// FAQ</b></p>
+    <p style="opacity:.5;"><b>FAQ</b></p>
     </br>
     <p><b>How do I submit a track?</b></p>
     <a href="https://airtable.com/shrH1ByMn652qj8lO">Submit a track here</a>
@@ -53,8 +53,8 @@
     <ul>
         <li>any genre is welcome as long as the content is not hurtful or offensive toward anyone</li>
 		<li>all are encouraged to participate (including white men), but especially non-white non-men</li>
-        <li>listening parties are capped at 8 people to maintain a small setting</li>
-        <li>we will all listen together using our radio station so please bring a device that can connect to the internet and your own headphones</li>
+        <li>listening parties are capped at 5 people to maintain a small, intimate setting</li>
+        <li>we will all listen together using a headphone splitter so <b><i>please bring your own wired headphones with a standard 3.5mm connection</i></b></li>
     </ul>
     </br></br>
     <a href="https://derektorsani.com">A project by Derek Torsani</a>
